--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
             ebayui-switch {
                 margin-left: auto;
             }
+            ebayui-switch[placeholder="true"] {
+                align-items: center;
+                display: inline-flex;
+                height: 40px;
+            }
+            ebayui-switch[placeholder="true"]::after {
+                background-color: #eee;
+                border-radius: 400px;
+                content: '';
+                height: 24px;
+                width: 40px;
+            }
         </style>
     </head>
     <body>
@@ -44,15 +56,15 @@
             <ul>
                 <li>
                     <span id="label1">ebayui-switch 1</span>
-                    <ebayui-switch label="label1"></ebayui-switch>
+                    <ebayui-switch label="label1" placeholder="true"></ebayui-switch>
                 </li>
                 <li>
                     <span id="label2">ebayui-switch 2</span>
-                    <ebayui-switch label="label2" checked></ebayui-switch>
+                    <ebayui-switch label="label2" placeholder="true" checked></ebayui-switch>
                 </li>
                 <li>
                     <span id="label3">ebayui-switch 3</span>
-                    <ebayui-switch label="label3"></ebayui-switch>
+                    <ebayui-switch label="label3" placeholder="true"></ebayui-switch>
                 </li>
             </ui>
         </main>
